--- a/Client/src/components/sequences-fragment/sequences-fragment.html
+++ b/Client/src/components/sequences-fragment/sequences-fragment.html
@@ -1,1 +1,28 @@
-<p>sequences</p>
+<div class="fragment">
+    <div data-bind="if: pin">
+        <span data-bind="text: pin().name()"></span>
+        <table id="pinTable">
+            <thead>
+                <tr>
+                <th class="borderedCell">Start</th>
+                <th class="borderedCell">Start Range</th>
+                <th class="borderedCell">End</th>
+                <th class="borderedCell">End Range</th>
+                <th width="20"></th>
+                </tr>
+            </thead>
+            <tbody data-bind="foreach: sequences">
+                <tr data-bind="click: $parent.clicked, clickBubble: false">
+                    <td data-bind="text: start_time"></td>
+                    <td data-bind="text: start_range"></td>
+                    <td data-bind="text: end_time"></td>
+                    <td data-bind="text: end_range"></td>
+                    <td>
+                        <button class="destroy" data-bind="click: $parent.remove, clickBubble: false" ></button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+        <button data-bind="click: showAdd">add sequence!</button>
+    </div>
+</div>
