--- a/Client/src/components/add-sequence-fragment/add-sequence-fragment.html
+++ b/Client/src/components/add-sequence-fragment/add-sequence-fragment.html
@@ -1,4 +1,5 @@
 <div class="fragment">
+	<h3>Add Sequence</h3>
 	<input placeholder="Start" data-bind="textInput: start_time"/><br>
 	<input placeholder="Range" data-bind="textInput: start_range"/><br>
 	<input placeholder="End" data-bind="textInput: end_time"/><br>
