--- a/Client/src/components/sequences-fragment/sequences-fragment.html
+++ b/Client/src/components/sequences-fragment/sequences-fragment.html
@@ -1,30 +1,41 @@
 <div class="fragment">
-  <div data-bind="if: pin">
-    <h3 data-bind="text: pin().name()"></h3>
-    <table>
-    	<thead>
-    		<tr>
-    		  <th>Start</th>
-    		  <th>Stop</th>
-    		  <th></th>
-    		</tr>
-    	</thead>
-      <tbody data-bind="foreach: sequences">
-        <tr data-bind="click: $parent.clicked, clickBubble: false">
-          <td>
-            <span data-bind="text: start_time"></span>
-            (+-<span data-bind="text: start_range"></span>)
-          </td>
-          <td>
-            <span data-bind="text: end_time"></span>
-          	(+-<span data-bind="text: end_range"></span>)
-          </td>
-          <td>
-            <input class="destroy" type="image" src="/images/delete.svg" width="20" height="20" data-bind="click: $parent.pushRemove, clickBubble: false" />
-          </td>
-        </tr>
-      </tbody>
-    </table>
-    <button data-bind="click: pushAdd">add sequence!</button>
-  </div>
+	<div data-bind="if: pin">
+		<div data-bind="with: pin">
+			<div data-bind="ifnot: $parent.isEditing">
+				<button data-bind="click: $parent.pushEdit" class="topRight">Edit</button>
+				<h3 data-bind="text: name"></h3>
+			</div>
+			<div data-bind="if: $parent.isEditing">
+				<button data-bind="click: $parent.pushEdit" class="topRightSave">save</button>
+				<input data-bind="textInput: name" type="text" name="pin">
+			</div>
+			<h4>Schedule for <span data-bind="text: name"></span></h4>
+		</div>
+		<table>
+			<thead>
+				<tr>
+					<th>Start</th>
+					<th>Stop</th>
+					<th></th>
+				</tr>
+			</thead>
+			<tbody data-bind="foreach: sequences">
+				<tr data-bind="click: $parent.clicked, clickBubble: false">
+					<td>
+						<span data-bind="text: start_time"></span>
+						(+-<span data-bind="text: start_range"></span>)
+					</td>
+					<td>
+						<span data-bind="text: end_time"></span>
+					(+-<span data-bind="text: end_range"></span>)
+					</td>
+					<td>
+						<input class="destroy" type="image" src="/images/delete.svg" width="20" height="20" data-bind="click: $parent.pushRemove, clickBubble: false" />
+					</td>
+				</tr>
+			</tbody>
+		</table>
+		<p data-bind="if: sequences().length==0">No sequences given.</p>
+		<button data-bind="click: pushAdd">add sequence!</button>
+	</div>
 </div>
