--- a/Client/src/components/sequences-fragment/sequences-fragment.html
+++ b/Client/src/components/sequences-fragment/sequences-fragment.html
@@ -61,6 +61,6 @@
 			</tbody>
 		</table>
 		<p data-bind="if: viewSequences().length==0">No sequences given.</p>
-		<button data-bind="click: pushAdd">add sequence!</button>
+		<button class="saveRight" data-bind="click: pushAdd">add sequence!</button>
 	<!-- /ko -->
 </div>
