--- a/Client/src/components/sequences-fragment/sequences-fragment.html
+++ b/Client/src/components/sequences-fragment/sequences-fragment.html
@@ -2,15 +2,12 @@
 	<!-- ko if: pin -->
 		<!-- ko with: pin -->
 			<div class="fragHeader" data-bind="ifnot: $parent.isEditing">
-				<button data-bind="click: $parent.pushEditPin" class="topRight">Edit</button>
-				<h3 data-bind="text: name"></h3>
+				<div class="left"><h3 data-bind="text: name"></h3></div>
+				<div class="right"><button data-bind="click: $parent.pushEditPin" class="edit">Edit</button></div>
 			</div>
 			<div class="fragHeader" data-bind="if: $parent.isEditing">
-				<button data-bind="click: $parent.pushEditPin" class="save">save</button>
-				<input data-bind="textInput: name" type="text" name="pin" />
-			</div>
-			<div class="fragSubHeader">
-			<h4>Schedule for <span data-bind="text: name"></span></h4>
+				<div class="left"><input data-bind="textInput: name" type="text" name="pin" class="edit" /></div>
+				<div class="right"><button data-bind="click: $parent.pushEditPin" class="save">save</button></div>
 			</div>
 		<!-- /ko -->
 		<table>
@@ -48,7 +45,7 @@
 					<!-- /ko -->
 					<td>
 						<!-- ko ifnot: isEditing -->
-							<button data-bind="click: $parent.pushEditSequence" class="edit">Edit</button>
+							<button data-bind="click: $parent.pushEditSequence" class="editHidden">Edit</button>
 						<!-- /ko -->
 						<!-- ko if: isEditing -->
 							<button data-bind="click: $parent.pushEditSequence" class="save">save</button>
